test/Fail/Issue1271.err
Issue1271.agda:40.8-10: error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Is empty: x ≡ In x (stuck)
      [ at Issue1271.agda:40.8-10 ]
